--- a/LoginFormBackend/requirements.txt
+++ b/LoginFormBackend/requirements.txt
@@ -5,6 +5,7 @@ Django==5.0.2
 django-cors-headers==4.3.1
 django-rest-knox==4.2.0
 djangorestframework==3.14.0
+pillow==10.2.0
 pycparser==2.21
 pytz==2024.1
 sqlparse==0.4.4
