--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-LoginFormBackend/db.sqlite3
-LoginFormBackend/user_management/__pycache__
-LoginFormBackend/form_maker/migrations
+db.sqlite3
+user_management/__pycache__
+form_maker/migrations
